--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integração Contínua</li>
-        <li>Teste</li>
+        <li>Python Pandas: tratando e analisando dados</li>
     </ul>
 </body>
 </html>
